profile card's bg and text color fix on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ img {
 
 .overlay {
   border-image:
-    linear-gradient(hsla(18, 75%, 57%, 0)) fill 0.5;
+    linear-gradient(hsla(24, 98%, 38%, 0.1)) fill 0.5;
 }
 
 .left {
@@ -342,4 +342,8 @@ img {
     max-height: 500px;
   }
 
+  .profile-wrapper {
+    color: #4a5565;
+    background-color: hsla(22, 48%, 87%, 0.7);
+  }
 }
